Added README updated project settings

--- a/PasswordGenCLI/PasswordGenCLI.csproj
+++ b/PasswordGenCLI/PasswordGenCLI.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
 
@@ -15,6 +22,17 @@
 		<PackAsTool>true</PackAsTool>
 		<ToolCommandName>pwgen</ToolCommandName>
 		<PackageOutputPath>./nupkg</PackageOutputPath>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+		<Title>Password Generator CLI Tool</Title>
+		<Authors>algmironov</Authors>
+		<Company>algmironov.com</Company>
+		<Description>A cross-platform command-line tool for generating secure passwords.</Description>
+		<Copyright>MIT</Copyright>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<RepositoryUrl>https://github.com/algmironov/PasswordGeneratorCLI</RepositoryUrl>
+		<PackageTags>pwgen, password generator, cli tool</PackageTags>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	</PropertyGroup>
 
 </Project>
