updated project file

--- a/PasswordGenCLI/PasswordGenCLI.csproj
+++ b/PasswordGenCLI/PasswordGenCLI.csproj
@@ -25,6 +25,8 @@
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<Title>Password Generator CLI Tool</Title>
+		<PackageId>PasswordGenCLI</PackageId>
+		<Version>1.0.0</Version>
 		<Authors>algmironov</Authors>
 		<Company>algmironov.com</Company>
 		<Description>A cross-platform command-line tool for generating secure passwords.</Description>
