created class library

--- a/PasswordGenCLI/PasswordGenCLI.csproj
+++ b/PasswordGenCLI/PasswordGenCLI.csproj
@@ -18,6 +18,10 @@
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PasswordGenCLI.Common\PasswordGenCLI.Common.csproj" />
+  </ItemGroup>
+
 	<PropertyGroup>
 		<PackAsTool>true</PackAsTool>
 		<ToolCommandName>pwgen</ToolCommandName>
