- Added copy to clipboard feature with optional timeout before clearing clipboard

--- a/PasswordGenCLI/PasswordGenCLI.csproj
+++ b/PasswordGenCLI/PasswordGenCLI.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+    <PackageReference Include="TextCopy" Version="6.2.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -30,7 +31,7 @@
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<Title>Password Generator CLI Tool</Title>
 		<PackageId>PasswordGenCLI</PackageId>
-		<Version>1.0.1</Version>
+		<Version>2.0.0</Version>
 		<Authors>algmironov</Authors>
 		<Company>algmironov.com</Company>
 		<Description>A cross-platform command-line tool for generating secure passwords.</Description>
