updated README and .csproj files

--- a/PasswordGenCLI/PasswordGenCLI.csproj
+++ b/PasswordGenCLI/PasswordGenCLI.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -34,12 +34,15 @@
 		<Version>2.0.0</Version>
 		<Authors>algmironov</Authors>
 		<Company>algmironov.com</Company>
-		<Description>A cross-platform command-line tool for generating secure passwords.</Description>
+		<Description>A cross-platform command-line tool for generating фтand storing and saving secure passwords.</Description>
 		<Copyright>MIT</Copyright>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<RepositoryUrl>https://github.com/algmironov/PasswordGeneratorCLI</RepositoryUrl>
-		<PackageTags>pwgen, password generator, cli tool</PackageTags>
+		<PackageTags>pwgen, password generator, cli tool, dotnet, .net, C#</PackageTags>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageReleaseNotes>v2 Release Notes:
+- Secure storage feature: from now on you can not only generate password but save it securely with the service name it was creted to and   a login.
+ </PackageReleaseNotes>
 	</PropertyGroup>
 
 </Project>
