- added table view for entries list - added URL and NOTE properties - some changes

--- a/PasswordGenCLI/PasswordGenCLI.csproj
+++ b/PasswordGenCLI/PasswordGenCLI.csproj
@@ -31,7 +31,7 @@
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<Title>Password Generator CLI Tool</Title>
 		<PackageId>PasswordGenCLI</PackageId>
-		<Version>2.0.0</Version>
+		<Version>2.1.0</Version>
 		<Authors>algmironov</Authors>
 		<Company>algmironov.com</Company>
 		<Description>A cross-platform command-line tool for generating фтand storing and saving secure passwords.</Description>
@@ -40,7 +40,13 @@
 		<RepositoryUrl>https://github.com/algmironov/PasswordGeneratorCLI</RepositoryUrl>
 		<PackageTags>pwgen, password generator, cli tool, dotnet, .net, C#</PackageTags>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
-		<PackageReleaseNotes>v2 Release Notes:
+		<PackageReleaseNotes>v2.1 Release Notes:
+- Password won't be show after reading from storage and after creating new entry
+- Added colored table view while reading entries list or if there are several entries for the same service.
+- Added optional URL property for entry
+- Added optional Note property for entry
+
+v2 Release Notes:
 - Secure storage feature: from now on you can not only generate password but save it securely with the service name it was creted to and   a login.
  </PackageReleaseNotes>
 	</PropertyGroup>
