--- a/PasswordGenCLI/Properties/launchSettings.json
+++ b/PasswordGenCLI/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "PasswordGenCLI": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "read -l"
     }
   }
 }
