Исправлены ошибки Произведен рефакторинг некоторых методов Частично убраны магические константы Улучшена обработка исключений

--- a/PasswordGenCLI/Properties/launchSettings.json
+++ b/PasswordGenCLI/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "PasswordGenCLI": {
       "commandName": "Project",
-      "commandLineArgs": "read -l"
+      "commandLineArgs": "read -s Test"
     }
   }
 }
